--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write \"**/*.{js,json,md}\"",
-    "prepare": "npm run lint && npm test",
+    "prepare": "echo 'Skipping prepare step for production deployment'",
     "build": "echo 'No build step required'",
     "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/'), 'node_modules', 'junction') } catch (e) {}\""
   },
@@ -48,7 +48,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "eslint": "^9.24.0",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nock": "^14.0.3",
     "nodemon": "^3.1.9",
