--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@ PORT=5000
 NODE_ENV=development
 API_URL=http://localhost:5000
 
+# Appwrite Configuration
+APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+APPWRITE_PROJECT_ID=your_appwrite_project_id
+APPWRITE_API_KEY=your_appwrite_api_key
+APPWRITE_DATABASE_ID=your_appwrite_database_id
+
 # MongoDB Connection
 MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/dbname
 
