--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "prettier": "prettier --write \"**/*.{js,json,md}\"",
     "prepare": "echo 'Skipping prepare step for production deployment'",
     "build": "echo 'No build step required'",
-    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/'), 'node_modules', 'junction') } catch (e) {}\""
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/'), 'node_modules', 'junction') } catch (e) {}\"",
+    "setup-appwrite": "node setup-appwrite.js"
   },
   "keywords": [
     "micro-saas",
     "backend",
     "express",
-    "mongodb",
+    "appwrite",
     "jwt",
-    "redis",
     "authentication",
     "analytics"
   ],
@@ -42,8 +42,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
-    "redis": "^4.7.0",
+    "node-appwrite": "^11.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
