--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for a Micro SaaS application with user authentication, site monitoring, and analytics",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/scripts/check-env.js && node server.js",
     "dev": "nodemon server.js",
     "test": "jest --detectOpenHandles",
     "test:ci": "jest --ci --coverage",
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "node-appwrite": "^11.1.0",
     "swagger-jsdoc": "^6.2.8",
