nuevo configuracion de monitor

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "appwrite": "^17.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "cheerio": "^1.0.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -45,6 +47,7 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "node-appwrite": "^11.1.0",
+    "node-html-parser": "^7.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
